--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ serde = { version = "1", features=["derive"] }
 chrono = "0"
 rusoto_core = "0.43.0-beta.1"
 rusoto_s3 = "0.43.0-beta.1"
+rusoto_glue = "0.43.0-beta.1"
