--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ linux-musl:
     - aws ecr get-login --region=eu-central-1 | awk '{gsub(/ -e none/, ""); print}' | sh
     - export TAG=covid-19-$(git rev-parse HEAD)
     - sudo /etc/init.d/docker start
-    - docker build -t $REPO:$TAG -f Dockerfile.gitlab .
+    - docker build -t $REPO:$TAG -f Dockerfile .
     - docker push $REPO:$TAG
     - docker push $REPO:latest
     - kubectl -n production set image cronjob -l app=dracula-covid19 dracula=$REPO:$TAG
