--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,10 +26,9 @@ linux-musl:
     - aws ecr get-login --region=eu-central-1 | awk '{gsub(/ -e none/, ""); print}' | sh
     - export TAG=covid-19-$(git rev-parse HEAD)
     - sudo /etc/init.d/docker start
-    - sleep 30000
     - docker build -t $REPO:$TAG -f Dockerfile .
     - docker push $REPO:$TAG
     - docker push $REPO:latest
-    - kubectl -n production set image cronjob -l app=dracula-covid19 dracula=$REPO:$TAG
+#    - kubectl -n production set image cronjob -l app=dracula-covid19 dracula=$REPO:$TAG
     - echo $TAG
     - curl https://hooks.slack.com/services/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 -d "{\"channel\":\"#rust\", \"text\":\"Dracula-COVID19 $TAG is coughing in to his elbow\", \"username\":\"Dracula\", \"icon_emoji\":\":dracula2:\"}"
