--- a/kubernetes/dracula-covid19-cronjob.yaml
+++ b/kubernetes/dracula-covid19-cronjob.yaml
@@ -4,7 +4,7 @@ metadata:
   name: "dracula-covid19"
   namespace: "production"
   labels:
-    app: dracula
+    app: dracula-covid19
     task: all
 spec:
   schedule: "*/30 * * * *"
@@ -17,7 +17,7 @@ spec:
       template:
         metadata:
           labels:
-            app: dracula
+            app: dracula-covid19
             task: all
           annotations:
             iam.amazonaws.com/role: k8s-dracula
@@ -26,30 +26,10 @@ spec:
           serviceAccountName: dracula
           containers:
             - name: dracula
-              image: "554546661178.dkr.ecr.eu-central-1.amazonaws.com/dracula:covid19"
+              image: "554546661178.dkr.ecr.eu-central-1.amazonaws.com/dracula:covid-19-asdf1234"
               imagePullPolicy: Always
               command:
                 - bash
                 - "-c"
                 - echo START;
-                  kubectl -n production delete job waiter;
-                  kubectl -n production get pods -l app=dracula;
-                  mkdir -p target/debug && exec time dracula --table=all $POSTGRES_URL
-              #   after delete job waiter             kubectl -n production create job --from=cronjob/waiter waiter;
-              #                kubectl -n production patch job waiter -p '{"spec":{"activeDeadlineSeconds":3000}}';
-              env:
-                - name: POSTGRES_URL
-                  valueFrom:
-                    secretKeyRef:
-                      name: database-rx-production
-                      key: DATABASE_URL
-              envFrom:
-                - configMapRef:
-                    name: rx
-#                - secretRef:
-#                    name: dracula
-#          volumes:
-#            - name: aws
-#              secret:
-#                secretName: aws
-#      backoffLimit: 1
+                  exec time dracula-covid19
