--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ linux-musl:
     - cargo prune > /dev/null
     - time tar czf $S3_CACHE_TAR_NAME cargo/ target/; aws s3 cp --no-progress $S3_CACHE_TAR_NAME $DRAC_CACHE_PATH; du -hs $S3_CACHE_TAR_NAME
     - aws ecr get-login --region=eu-central-1 | awk '{gsub(/ -e none/, ""); print}' | sh
-    - export TAG=covid-19-$(git rev-parse HEAD)
+    - export TAG=covid-19-$(git rev-parse --short HEAD)
     - sudo /etc/init.d/docker start
     - docker build -t $REPO:$TAG -f Dockerfile .
     - docker push $REPO:$TAG
