web deployment and us virgin islands data fix

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,3 +31,4 @@ linux-musl:
     - kubectl -n production set image cronjob -l app=dracula-covid19 dracula=$REPO:$TAG
     - echo $TAG
     - curl https://hooks.slack.com/services/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 -d "{\"channel\":\"#rust\", \"text\":\"Dracula build \\\`$TAG\\\` is coughing in to his elbow\", \"username\":\"Dracula\", \"icon_emoji\":\":dracula2:\"}"
+    - kubectl create configmap dracula-covid19-web --from-file=index.html=kubernetes/index.html -n datascience -o yaml --dry-run | kubectl apply -f -
