--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ chrono = "0"
 rusoto_core = "0.43.0-beta.1"
 rusoto_s3 = "0.43.0-beta.1"
 rusoto_glue = "0.43.0-beta.1"
+rusoto_quicksight = "0.43.0-beta.1"
