--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,9 @@ rusoto_core = "0.43.0-beta.1"
 rusoto_s3 = "0.43.0-beta.1"
 rusoto_glue = "0.43.0-beta.1"
 rusoto_quicksight = "0.43.0-beta.1"
+url = "1.7"
+slack-hook = "0.7"
+sentry = "0.12.0"
+log = "0.4"
+pretty_env_logger = "0.3"
+byte-unit = "2.1.0"
