--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,15 +9,15 @@ edition = "2018"
 [dependencies]
 parquet = { git = "https://github.com/tureus/arrow.git", branch = "parquet_derive_schema_master_merge_in" }
 parquet_derive = { git = "https://github.com/tureus/arrow.git", branch = "parquet_derive_schema_master_merge_in", features = ["chrono", "uuid"] }
-reqwest = { version = "0", features = ["json"] }
+reqwest = { version = "0.10.4", features = ["json"] }
 csv = "1"
 tokio = { version = "0.2", features=["full"] }
 serde = { version = "1", features=["derive"] }
 chrono = "0"
-rusoto_core = "0.43.0-beta.1"
-rusoto_s3 = "0.43.0-beta.1"
-rusoto_glue = "0.43.0-beta.1"
-rusoto_quicksight = "0.43.0-beta.1"
+rusoto_core = "0.43.0"
+rusoto_s3 = "0.43.0"
+rusoto_glue = "0.43.0"
+rusoto_quicksight = "0.43.0"
 url = "1.7"
 slack-hook = "0.7"
 sentry = "0.12.0"
